# code-journey

./: .gitignore  LICENSE  LearnSSDT.sln  Program.cs  README.md  code-journey.csproj  index.js  package-lock.json  package.json
LearnSSDT/: LearnSSDT.jfm  LearnSSDT.sqlproj
LearnSSDT/config/: LearnSSDT_dev.publish.xml
csharp/ConsoleApp/: ConsoleApp.sln
csharp/MinimalWebAPI/: MinimalWebAPI.sln
csharp/WebAPI/: WebAPI.sln
csharp/WebAppMVC/: WebAppMVC.sln
css/cascade/: index.html
dart/: classes.dart  conditionals.dart  fizzbuzz.dart  functions.dart  helloworld.dart  input.dart  lists.dart  loops.dart  maps.dart  type_conversions.dart  types.dart  variables.dart
experiments/Quiz/: Quiz.sln
experiments/ToDo/: pyproject.toml  tox.ini
experiments/ToDo/src/todo/: todolist.py
experiments/ToDo/tests/unit/: test_todo.py
express-js/: index.js  package-lock.json
express-js/views/: about.ejs  guest.ejs  index.ejs
html/: index.html
html/styles/: style.css
javascript/es6-syntax/: index.html
javascript/express-js/: package-lock.json  package.json
javascript/react-js/: package-lock.json  package.json
javascript/reactjs/: package-lock.json
models/: user.js
python/learn-django/: pyproject.toml
python/learn-django/src/core/: urls.py
python/learn-django/src/core/settings/: __init__.py  base.py  development.py  production.py  staging.py
python/learn-django/src/polls/: models.py  urls.py  views.py
python/learn-django/src/polls/migrations/: 0001_initial.py
views/: 404.ejs  404.html  about.ejs  about.html  guest.ejs  index.ejs  index.html
(+91 files in other folders)
