[project]
name = "todo"
version = "0.1.0"
description = "A simple application to manage to-dos"
authors = [
    {name = "Coleman Matey",email = "113218526+colemanmatey@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.format.dependencies]
autopep8 = "^2.3.1"
isort = "^5.13.2"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mccabe = "^0.7.0"


[tool.poetry.group.typing.dependencies]
mypy = "^1.14.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.metrics.dependencies]
memory-profiler = "^0.61.0"


[tool.poetry.group.workflow.dependencies]
pre-commit = "^4.0.1"
tox = "^4.23.2"

